<resources>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="app_name">Registration</string>
    <string name="n_a">N/A</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="sign_up">Sign Up</string>
    <string name="large_text">rasel rasel rasel rasel rasel rasel rasel rasel </string>
    <string name="registration">Registration</string>
    <string name="all_user">ALL USER</string>
    <string name="no_data_found">No Data Found</string>


</resources>
